--- a/WebContent/lang/lang_navbar_it.json
+++ b/WebContent/lang/lang_navbar_it.json
@@ -1,20 +1,33 @@
 {
-        "titles" : {
-                "home": "Home",
-                "experiments": {
-                        "header": "Esperimenti",
-                        "online": {
-                                "header": "Online",
-                                "solar" : "Solare"
-                        },
-                        "reservations" : {
-                                "header": "PRENOTAZIONI",
-                                "new": "Nuova",
-                                "pending": "In attesa"
-                        }
-                },
-                "images": {
-                        "header": "Immagini"
-                }
+    "titles": {
+        "home": "Home",
+        "experiments": {
+            "header": "Esperimenti",
+            "online": {
+                "header": "ONLINE",
+                "solar": "Solare",
+                "night": "Notturno"
+            },
+            "reservations": {
+                "header": "PRENOTAZIONI",
+                "new": "Nuova",
+                "pending": "In attesa"
+            },
+            "offline": {
+                "header": "OFFLINE",
+                "pspace": "Personal Space",
+                "wolf": "Attività solare",
+                "luiza": "Variable stars"
+            }
+        },
+        "images": {
+            "header": "Immagini"
+        },
+        "profile": {
+            "header": "Profile"
+        },
+        "issues": {
+            "header": "Issues"
         }
+    }
 }
